--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,33 +5,33 @@ on:
   pull_request:
 
 jobs:
-  package-linux:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        arch:
-          - x86_64
-          - arm64
-    env:
-      ARCH: ${{ matrix.arch }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          sudo apt-get update -y && \
-          sudo apt-get install -y yasm
-      - name: Install ARM64 compiler
-        if: env.ARCH == 'arm64'
-        run: |
-          sudo apt-get update -y && \
-          sudo apt-get install -y gcc-aarch64-linux-gnu
-      - name: Build
-        run: ./build-linux.sh
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ffmpeg-linux-${{ env.ARCH }}
-          path: artifacts/
+  # package-linux:
+  #   runs-on: ubuntu-20.04
+  #   strategy:
+  #     matrix:
+  #       arch:
+  #         - x86_64
+  #         - arm64
+  #   env:
+  #     ARCH: ${{ matrix.arch }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Install dependencies
+  #       run: |
+  #         sudo apt-get update -y && \
+  #         sudo apt-get install -y yasm
+  #     - name: Install ARM64 compiler
+  #       if: env.ARCH == 'arm64'
+  #       run: |
+  #         sudo apt-get update -y && \
+  #         sudo apt-get install -y gcc-aarch64-linux-gnu
+  #     - name: Build
+  #       run: ./build-linux.sh
+  #     - name: Archive production artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: ffmpeg-linux-${{ env.ARCH }}
+  #         path: artifacts/
 
   package-windows:
     runs-on: ubuntu-20.04
@@ -77,30 +77,30 @@ jobs:
           name: ffmpeg-${{ matrix.target }}
           path: artifacts/
 
-  release:
-    runs-on: ubuntu-latest
-    needs:
-      - package-linux
-      - package-windows
-      - package-macos
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          path: artifacts/
-      - name: Make tarballs
-        run: |
-          mkdir artifacts/release/
-          cd artifacts/
-          for dir in ffmpeg-*/ffmpeg-*
-          do
-            name=$(basename $dir)
-            tar czf release/$name.tar.gz -C $(dirname $dir) $name
-          done
-          ls -l release/
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/v')
-        with:
-          files: artifacts/release/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # release:
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - package-linux
+  #     - package-windows
+  #     - package-macos
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         path: artifacts/
+  #     - name: Make tarballs
+  #       run: |
+  #         mkdir artifacts/release/
+  #         cd artifacts/
+  #         for dir in ffmpeg-*/ffmpeg-*
+  #         do
+  #           name=$(basename $dir)
+  #           tar czf release/$name.tar.gz -C $(dirname $dir) $name
+  #         done
+  #         ls -l release/
+  #     - name: Release
+  #       uses: softprops/action-gh-release@v1
+  #       if: startsWith(github.ref, 'refs/tags/v')
+  #       with:
+  #         files: artifacts/release/*
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
